# python-project-lvl4

./: .coverage  .coveragerc  .env  .gitignore  Makefile  README.md  coverage.lcov  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: github-action.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: test_label.json  test_label2.json
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_add.html  label_delete.html  label_list.html  label_update.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: test_status.json  test_status2.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_add.html  status_delete.html  status_update.html  statuses_list.html
task_manager/: settings.py  urls.py  views.py
task_manager/settings/: __init__.py  common_settings.py  dev_settings.py  prod_settings.py
task_manager/static/: style.css
task_manager/templates/: base.html  greet.html
task_manager/templates/inc/: _nav.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: test_task.json  test_task_label.json
tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0002_initial.py  0003_alter_task_author.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: test_user.json  test_user2.json
users/migrations/: 0001_initial.py
(+10 files in other folders)
